fix: update CORS configuration to allow local Vite server and Render subdomains